# clear-benchmark

./: README.md  REFERENCES.md  TOOLS.md  install.sh  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
examples/: demo.py
src/clear_benchmark/: __init__.py  __main__.py  benchmark.py
tests/: test_benchmark.py
